# requirements

./: .gitignore  Dockerfile  README.md  index.ipynb  programming_week_2.ipynb  read_file.py  requirements-no-deps.txt  requirements.in  requirements.txt  start  week_3.ipynb
.github/workflows/: ci.yml
.jupyter/labconfig/: default_setting_overrides.json
DiscWithHole/: Linear_Disc_with_hole.ipynb
SimpleMechanics/: SimpleMechanics.ipynb
coding_club_2018/: week_3.ipynb  week_4_coding.ipynb  week_4_intro.ipynb
intermediate_tutorial/: Untitled.ipynb  answers.ipynb  python_packaging.ipynb  questions.ipynb
intermediate_tutorial/poetry_package/: pyproject.toml
intermediate_tutorial/poetry_package/poetrypackage/: data_science.py  simple_math.py
intermediate_tutorial/poetry_package/poetrypackage/data/: customers.csv
intermediate_tutorial/poetry_package/poetrypackage/tests/: test_data_science.py  test_simple_math.py
intermediate_tutorial/simple_package/: requirements.txt  setup.py
intermediate_tutorial/simple_package/simplepackage/: simple_math.py
scripts/: check_pass_fail.py  read_file.py
tests/: pyvista.ipynb
