[tool.poetry]
name = "poetrypackage"
version = "0.1.0"
description = "A simple Poetry package"
authors = ["Carl Vitzthum"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
